--- a/Css/style.css
+++ b/Css/style.css
@@ -257,7 +257,7 @@ footer{
     }
     
     th,tr,td {
-        border: 1px solid #521515;;;
+        border: 1px solid #521515;
         padding: 15px;
         font-size: 2.5vw;
         text-align: center;
@@ -670,7 +670,7 @@ footer{
     }
     
     th,tr,td {
-        border: 1px solid #521515;;;
+        border: 1px solid #521515;
         padding: 15px;
         font-size: 2.5vw;
         text-align: center;
@@ -1083,7 +1083,7 @@ footer{
     }
     
     th,tr,td {
-        border: 1px solid #521515;;;
+        border: 1px solid #521515;
         padding: 15px;
         font-size: 2vw;
         text-align: center;
